--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                   <ul class="nav">
                     <li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#clients">Clients</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                   </ul>
                   <div class="mobile-menu"><span></span><span></span></div>
@@ -230,55 +229,12 @@
         </div>
       </section>
       <section id="products" class="home-works">
-        <div class="container">
-          <div class="works-section">
-            <div class="section-title d-flex justify-content-center works-title">
-              <h2>Products</h2>
-              <h3>Our Products</h3>
-            </div>
-            <div class="works-container">
-              <div class="work-list crisp-works">
-                <div class="work-wrapper d-flex flex-column-reverse flex-md-row-reverse">
-                  <div class="work-description d-flex align-items-center">
-                    <div class="work-detail text-center text-md-left">
-                      <h3>Redacted</h3>
-                      <p>NodeJS</p><a class="btn btn-work" href="#contact">60$ Monthly</a>
-                    </div>
-                  </div>
-                  <div class="work-image d-flex justify-content-center align-items-center"><img src=""></div>
-                </div>
-              </div>
-              <div class="work-list lifecycle-works">
-                <div class="work-wrapper d-flex flex-column-reverse flex-md-row">
-                  <div class="work-description d-flex align-items-center">
-                    <div class="work-detail text-center text-md-left">
-                      <h3>Redacted</h3>
-                      <p>NodeJS</p><a class="btn btn-work" href="#contact">30$ Monthly</a>
-                    </div>
-                  </div>
-                  <div class="work-image d-flex justify-content-center align-items-center"><img src=""></div>
-                </div>
-              </div>
-              <div class="work-list crisp-works">
-                <div class="work-wrapper d-flex flex-column-reverse flex-md-row-reverse">
-                  <div class="work-description d-flex align-items-center">
-                    <div class="work-detail text-center text-md-left">
-                      <h3>Redacted</h3>
-                      <p>NodeJS</p><a class="btn btn-work" href="#contact">30$ Monthly</a>
-                    </div>
-                  </div>
-                  <div class="work-image d-flex justify-content-center align-items-center"><img src=""></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <section id="contact">
         <footer>
           <div class="footer-container d-flex justify-content-center align-items-center">
             <div class="container">
               <div class="footer-text text-center">
-                <p>Interested to work with us?</p><a class="btn btn-primary btn-talk" href="mailto:Lscompanyinc@gmail.com">Email us!</a>
+                <p>Interested to work with us?</p><a class="btn btn-primary btn-talk" href="mailto:stevenha75@gmail.com">Email us!</a>
               </div>
             </div>
             </div>
